# compiler_ex

./: .clangd  .gitignore  CMakeLists.txt  ReadMe.md  TODO.MD  test.src
lexer/: keyword.hpp  lexer.hpp  number.hpp  token.hpp  type.hpp
src/: CMakeLists.txt  test.src  test_lexer.cpp  utils.hpp
src/lexer/: CMakeLists.txt  identify.hpp  keyword.hpp  lexer.cpp  lexer.hpp  number.hpp  string_literals.hpp  token.cpp  token.hpp  type.hpp  utils.hpp
test/: CMakeLists.txt  test_lexer.cpp
